file(GLOB hdrs "*.h*") #Добавление в переменную hdrs всех файлов с расширением .h
file(GLOB srcs "*.cpp") #Добавление в переменную srcs всех файлов с расширением .cpp

add_executable(${vector} ${srcs} ${hdrs}) #Создание проекта с именем из переменной ${PROJECT_NAME}, в него добавляются файлы из переменных ${srcs} и ${hdrs}

#add_library(${vectorlib} STATIC ${srcs} ${hdrs}) #Создание статической библиотеки с именем из переменной ${MyLib1}, объявленной в родительском CMake файле (локальные переменные переносятся в наследников), в неё добавляются файлы из переменных ${srcs} и ${hdrs}


 #Проект собирается в поддиректории lib1
target_link_libraries(${vector} ${vectorlib}) #Подключение к проекту с именем ${PROJECT_NAME} библиотеки с именем ${MyLib1}
